# capsule_shell

./: .gitignore  Cargo.toml
batt_low/: Cargo.toml
batt_low/src/: main.rs
config/capsule/: dark.css  light.css
src/: bakup.rs  ctrl.rs  desktoppy.rs  main.rs  notification_extd.rs  notifications.rs  osd.rs  ssd.rs
src/widgets/: battery.rs  calendar.rs  mod.rs  position.rs  stick.rs  system.rs
